plugins {
    id "java"
}

group "ru.craftysoft"
version "1.0.0"

sourceCompatibility = 14

dependencies {
    compile platform("org.apache.logging.log4j:log4j-bom:2.13.3")
    compile(
            "commons-cli:commons-cli:1.4",

            "org.apache.logging.log4j:log4j-api",
            "org.apache.logging.log4j:log4j-core"
    )
    testCompile(
            "org.junit.jupiter:junit-jupiter:5.6.2",
            "org.assertj:assertj-core:3.16.1",
            "org.mockito:mockito-core:3.3.3"
    )
}

compileJava() {
    options.compilerArgs += ["--enable-preview"]
}

compileTestJava {
    options.compilerArgs += ["--enable-preview"]
}

test {
    useJUnitPlatform {
        excludeEngines "junit-vintage"
    }
    jvmArgs "--enable-preview"
    testLogging {
        events "passed", "skipped", "failed"
        exceptionFormat "full"
    }
}

repositories {
    mavenLocal()
    mavenCentral()
    jcenter()
}
